--- a/verl/trainer/config/ppo_megatron_trainer.yaml
+++ b/verl/trainer/config/ppo_megatron_trainer.yaml
@@ -72,7 +72,7 @@ algorithm:
   pf_ppo:
     reweight_method: pow # ["pow", "max_min", "max_random"]
     weight_pow: 2.0
-  entropy_recover:
+  entropy_control:
     frequency: 100000
     fixed_entropy: 0.0
     entropy_lower_bound: 0.0
